test/validator/tuple_array.orderly
array {
      string {0,10};
      integer;
      string;
};