test/negative_cases/numeric_overflow.orderly
integer {0, 777777777777777777777777777777777777777777777777777777777777777.0} maybeBigAss;
